2004-12-22  Not Zed  <NotZed@Ximian.com>

	* e-plugin.c: include config.h.

2004-12-17  Not Zed  <NotZed@Ximian.com>

	* e-popup.c (e_popup_add_items): add a translation domain to api.
	(e_popup_create_menu): translate the label using the supplied
	domain.
	(emph_popup_factory): pass domain to popup_add_items.

	* e-plugin.c (ep_construct): if we have a localedir set, then
	bindtextdomain so gettext can find it.

2004-12-21  JP Rosevear  <jpr@novell.com>

	Fixes #30992
	
	* e-config.c (e_config_create_window): use cancel rather than
	close button

2004-12-21  JP Rosevear  <jpr@novell.com>
	
	* e-account.c: convert to G_DEFINE_TYPE

	* e-account-list.c: ditto
	
2004-12-08  Not Zed  <NotZed@Ximian.com>

	* e-plugin.c (e_plugin_load_plugins): kill warning if we can't
	open the path.

2004-12-06  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): set the table spacings to 6 for
	generated tables.

2004-11-22  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): if the table existed before and we have
	no factory, destroy it always.

2004-12-03  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): revert the patch from chenthill, this
	wont work yet.

2004-11-29  Mengjie Yu  <meng-jie.yu@sun.com>

	* e-config.c: (ec_rebuild):add mnemonic for label.
	* e-passwords.c: (ep_ask_password):add description for password dialog.

2004-11-26  JP Rosevear  <jpr@novell.com>

	* e-gui-utils.c (e_create_image_widget): get the image directly
	from the icon factory

	* e-config.c: insert debug defines so we can
	turn spew on and off

	* e-event.c: insert debug defines so we can turn spew on and off	

	* e-menu.c: insert debug defines so we can turn spew on and off		
	
	* e-plugin.c: insert debug defines and set to off for now

	* e-popup.c: insert debug defines so we can turn spew on and off
	(e_popup_create_menu): get the image directly from the icon
	factory

2004-11-26  JP Rosevear  <jpr@novell.com>
	
	* e-icon-factory.h: add proto
