@@ -1,3 +1,8 @@
+2005-01-04  Rodrigo Moya <rodrigo@novell.com>
+
+	* e-categories-config.[ch]: removed most of the API. The rest will
+	be removed as the GAL dependencies are sorted out.
+
 2004-12-22  Not Zed  <NotZed@Ximian.com>
 
 	* e-plugin.c: include config.h.
